# sfmlSimpleChat

./: .gitignore
client/: CMakeLists.txt
client/include/: chatClient.h
client/src/: chatClient.cpp  main.cpp
server/: CMakeLists.txt
server/include/: chatServer.h
server/src/: chatServer.cpp  main.cpp
